--- a/client.htm
+++ b/client.htm
@@ -275,16 +275,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
+                        <li class="py-2"><a href="/free-nodes/2025-6-15-free-node-subscribe-links.htm" title="「6月15日」最高速度20.6M/S，2025年Clash/SSR/V2ray/Shadowrocket每天更新免费节点订阅链接">「6月15日」最高速度20.6M/S，2025年Clash/SSR/V2ray/Shadowrocket每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-6-27-free-node-subscribe-links.htm" title="「6月27日」最高速度18.4M/S，2025年Clash/Shadowrocket/V2ray/SSR每天更新免费节点订阅链接">「6月27日」最高速度18.4M/S，2025年Clash/Shadowrocket/V2ray/SSR每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-7-6-free-high-speed-nodes.htm" title="「7月6日」最高速度21M/S，2025年Shadowrocket/SSR/Clash/V2ray每天更新免费节点订阅链接">「7月6日」最高速度21M/S，2025年Shadowrocket/SSR/Clash/V2ray每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-7-20-free-node-subscribe.htm" title="「7月20日」最高速度20.8M/S，2025年Clash/Shadowrocket/SSR/V2ray每天更新免费节点订阅链接">「7月20日」最高速度20.8M/S，2025年Clash/Shadowrocket/SSR/V2ray每天更新免费节点订阅链接</a></li>
                         <li class="py-2"><a href="/free-nodes/2025-7-16-free-node-subscribe.htm" title="「7月16日」最高速度18.6M/S，2025年V2ray/Shadowrocket/Clash/SSR每天更新免费节点订阅链接">「7月16日」最高速度18.6M/S，2025年V2ray/Shadowrocket/Clash/SSR每天更新免费节点订阅链接</a></li>
                         <li class="py-2"><a href="/free-nodes/2025-7-11-node-share-links.htm" title="「7月11日」最高速度20.1M/S，2025年Clash/SSR/V2ray/Shadowrocket每天更新免费节点订阅链接">「7月11日」最高速度20.1M/S，2025年Clash/SSR/V2ray/Shadowrocket每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-6-23-free-subscribe-node.htm" title="「6月23日」最高速度20.5M/S，2025年SSR/Shadowrocket/Clash/V2ray每天更新免费节点订阅链接">「6月23日」最高速度20.5M/S，2025年SSR/Shadowrocket/Clash/V2ray每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-6-19-free-node-subscribe-links.htm" title="「6月19日」最高速度18.8M/S，2025年SSR/V2ray/Clash/Shadowrocket每天更新免费节点订阅链接">「6月19日」最高速度18.8M/S，2025年SSR/V2ray/Clash/Shadowrocket每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-7-21-free-node-subscribe.htm" title="「7月21日」最高速度21.3M/S，2025年V2ray/Clash/Shadowrocket/SSR每天更新免费节点订阅链接">「7月21日」最高速度21.3M/S，2025年V2ray/Clash/Shadowrocket/SSR每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-6-12-free-v2ray-subscribe.htm" title="「6月12日」最高速度22.8M/S，2025年Clash/V2ray/SSR/Shadowrocket每天更新免费节点订阅链接">「6月12日」最高速度22.8M/S，2025年Clash/V2ray/SSR/Shadowrocket每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-7-20-free-node-subscribe.htm" title="「7月20日」最高速度20.8M/S，2025年Clash/Shadowrocket/SSR/V2ray每天更新免费节点订阅链接">「7月20日」最高速度20.8M/S，2025年Clash/Shadowrocket/SSR/V2ray每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-7-17-free-high-speed-nodes.htm" title="「7月17日」最高速度23M/S，2025年V2ray/Shadowrocket/Clash/SSR每天更新免费节点订阅链接">「7月17日」最高速度23M/S，2025年V2ray/Shadowrocket/Clash/SSR每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-7-7-free-node-subscribe-links.htm" title="「7月7日」最高速度20.8M/S，2025年Shadowrocket/V2ray/SSR/Clash每天更新免费节点订阅链接">「7月7日」最高速度20.8M/S，2025年Shadowrocket/V2ray/SSR/Clash每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-7-22-free-node-subscribe-links.htm" title="「7月22日」最高速度18.1M/S，2025年Clash/V2ray/Shadowrocket/SSR每天更新免费节点订阅链接">「7月22日」最高速度18.1M/S，2025年Clash/V2ray/Shadowrocket/SSR每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-7-10-node-share.htm" title="「7月10日」最高速度19.2M/S，2025年SSR/Shadowrocket/Clash/V2ray每天更新免费节点订阅链接">「7月10日」最高速度19.2M/S，2025年SSR/Shadowrocket/Clash/V2ray每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-6-22-free-subscribe-node.htm" title="「6月22日」最高速度20.6M/S，2025年SSR/Shadowrocket/Clash/V2ray每天更新免费节点订阅链接">「6月22日」最高速度20.6M/S，2025年SSR/Shadowrocket/Clash/V2ray每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-6-18-free-subscribe-node.htm" title="「6月18日」最高速度20M/S，2025年V2ray/Clash/SSR/Shadowrocket每天更新免费节点订阅链接">「6月18日」最高速度20M/S，2025年V2ray/Clash/SSR/Shadowrocket每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-7-28-free-node-subscribe.htm" title="「7月28日」最高速度22.3M/S，2025年SSR/Clash/V2ray/Shadowrocket每天更新免费节点订阅链接">「7月28日」最高速度22.3M/S，2025年SSR/Clash/V2ray/Shadowrocket每天更新免费节点订阅链接</a></li>
                     </ul>
     </div>
 </div>
@@ -296,7 +296,10 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">24</span> <a href="/date/2025-07/" title="2025-07 归档">2025-07</a></h4>
+                <h4><span class="badge" style="float: right;">1</span> <a href="/date/2025-08/" title="2025-08 归档">2025-08</a></h4>
+            </li>
+                        <li class="py-2">
+                <h4><span class="badge" style="float: right;">29</span> <a href="/date/2025-07/" title="2025-07 归档">2025-07</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">21</span> <a href="/date/2025-06/" title="2025-06 归档">2025-06</a></h4>
