--- a/free-nodes/2025-7-24-node-share-links.htm
+++ b/free-nodes/2025-7-24-node-share-links.htm
@@ -267,16 +267,16 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/free-nodes/2025-6-13-free-node-subscribe-links.htm" title="「6月13日」最高速度20.7M/S，2025年SSR/V2ray/Shadowrocket/Clash每天更新免费节点订阅链接">「6月13日」最高速度20.7M/S，2025年SSR/V2ray/Shadowrocket/Clash每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-7-17-free-high-speed-nodes.htm" title="「7月17日」最高速度23M/S，2025年V2ray/Shadowrocket/Clash/SSR每天更新免费节点订阅链接">「7月17日」最高速度23M/S，2025年V2ray/Shadowrocket/Clash/SSR每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-6-11-free-v2ray.htm" title="「6月11日」最高速度20M/S，2025年V2ray/SSR/Shadowrocket/Clash每天更新免费节点订阅链接">「6月11日」最高速度20M/S，2025年V2ray/SSR/Shadowrocket/Clash每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-7-23-free-v2ray.htm" title="「7月23日」最高速度23M/S，2025年SSR/V2ray/Clash/Shadowrocket每天更新免费节点订阅链接">「7月23日」最高速度23M/S，2025年SSR/V2ray/Clash/Shadowrocket每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-6-24-node-share-links.htm" title="「6月24日」最高速度20.1M/S，2025年V2ray/Clash/SSR/Shadowrocket每天更新免费节点订阅链接">「6月24日」最高速度20.1M/S，2025年V2ray/Clash/SSR/Shadowrocket每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-6-25-node-share.htm" title="「6月25日」最高速度19.1M/S，2025年SSR/V2ray/Shadowrocket/Clash每天更新免费节点订阅链接">「6月25日」最高速度19.1M/S，2025年SSR/V2ray/Shadowrocket/Clash每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-6-30-node-share.htm" title="「6月30日」最高速度18.6M/S，2025年Shadowrocket/SSR/Clash/V2ray每天更新免费节点订阅链接">「6月30日」最高速度18.6M/S，2025年Shadowrocket/SSR/Clash/V2ray每天更新免费节点订阅链接</a></li>
                         <li class="py-2"><a href="/free-nodes/2025-7-14-free-node-subscribe.htm" title="「7月14日」最高速度19.2M/S，2025年V2ray/Shadowrocket/Clash/SSR每天更新免费节点订阅链接">「7月14日」最高速度19.2M/S，2025年V2ray/Shadowrocket/Clash/SSR每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-7-10-node-share.htm" title="「7月10日」最高速度19.2M/S，2025年SSR/Shadowrocket/Clash/V2ray每天更新免费节点订阅链接">「7月10日」最高速度19.2M/S，2025年SSR/Shadowrocket/Clash/V2ray每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-7-20-free-node-subscribe.htm" title="「7月20日」最高速度20.8M/S，2025年Clash/Shadowrocket/SSR/V2ray每天更新免费节点订阅链接">「7月20日」最高速度20.8M/S，2025年Clash/Shadowrocket/SSR/V2ray每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-6-28-free-v2ray-subscribe.htm" title="「6月28日」最高速度20.2M/S，2025年SSR/Shadowrocket/V2ray/Clash每天更新免费节点订阅链接">「6月28日」最高速度20.2M/S，2025年SSR/Shadowrocket/V2ray/Clash每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-7-5-free-v2ray.htm" title="「7月5日」最高速度18.9M/S，2025年V2ray/Shadowrocket/SSR/Clash每天更新免费节点订阅链接">「7月5日」最高速度18.9M/S，2025年V2ray/Shadowrocket/SSR/Clash每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-6-29-free-node-subscribe.htm" title="「6月29日」最高速度19.3M/S，2025年Shadowrocket/SSR/Clash/V2ray每天更新免费节点订阅链接">「6月29日」最高速度19.3M/S，2025年Shadowrocket/SSR/Clash/V2ray每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-6-13-free-node-subscribe-links.htm" title="「6月13日」最高速度20.7M/S，2025年SSR/V2ray/Shadowrocket/Clash每天更新免费节点订阅链接">「6月13日」最高速度20.7M/S，2025年SSR/V2ray/Shadowrocket/Clash每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-7-19-clash-v2ray-ss-ssr.htm" title="「7月19日」最高速度19.1M/S，2025年Shadowrocket/Clash/V2ray/SSR每天更新免费节点订阅链接">「7月19日」最高速度19.1M/S，2025年Shadowrocket/Clash/V2ray/SSR每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-6-27-free-node-subscribe-links.htm" title="「6月27日」最高速度18.4M/S，2025年Clash/Shadowrocket/V2ray/SSR每天更新免费节点订阅链接">「6月27日」最高速度18.4M/S，2025年Clash/Shadowrocket/V2ray/SSR每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-7-23-free-v2ray.htm" title="「7月23日」最高速度23M/S，2025年SSR/V2ray/Clash/Shadowrocket每天更新免费节点订阅链接">「7月23日」最高速度23M/S，2025年SSR/V2ray/Clash/Shadowrocket每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-7-13-clash-v2ray-ss-ssr.htm" title="「7月13日」最高速度22.4M/S，2025年Shadowrocket/Clash/SSR/V2ray每天更新免费节点订阅链接">「7月13日」最高速度22.4M/S，2025年Shadowrocket/Clash/SSR/V2ray每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-7-26-free-node-subscribe-links.htm" title="「7月26日」最高速度22.6M/S，2025年Clash/Shadowrocket/V2ray/SSR每天更新免费节点订阅链接">「7月26日」最高速度22.6M/S，2025年Clash/Shadowrocket/V2ray/SSR每天更新免费节点订阅链接</a></li>
                     </ul>
     </div>
 </div>
@@ -288,7 +288,10 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">24</span> <a href="/date/2025-07/" title="2025-07 归档">2025-07</a></h4>
+                <h4><span class="badge" style="float: right;">1</span> <a href="/date/2025-08/" title="2025-08 归档">2025-08</a></h4>
+            </li>
+                        <li class="py-2">
+                <h4><span class="badge" style="float: right;">29</span> <a href="/date/2025-07/" title="2025-07 归档">2025-07</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">21</span> <a href="/date/2025-06/" title="2025-06 归档">2025-06</a></h4>
