--- a/paid-subscribe/index.html
+++ b/paid-subscribe/index.html
@@ -111,7 +111,7 @@
                     <div class="col-md-9">
                                                                                 <div class="panel panel-default">
                                 <div class="panel-heading">
-                                    <a href="javascript:;" class="js_to" data-url="https://138.2.82.216/#/register?code=" data-type="FeiniaoJiasu" data-code="11wam8Ig" target="_blank"><b>飞鸟加速</b></a>
+                                    <a href="javascript:;" class="js_to" data-url="https://www.112112789.xyz/?path=" data-type="FeiniaoJiasu" data-code="register&code" target="_blank"><b>飞鸟加速</b></a>
                                 </div>
                                 <div class="panel-body">
                                     
@@ -164,7 +164,7 @@
                                                                             </dl>
                                 </div>
                                 <div class="panel-footer">
-                                    <a href="javascript:;" class="js_to" data-url="https://138.2.82.216/#/register?code=" data-type="FeiniaoJiasu" data-code="11wam8Ig" target="_blank">点击查看</a>
+                                    <a href="javascript:;" class="js_to" data-url="https://www.112112789.xyz/?path=" data-type="FeiniaoJiasu" data-code="register&code" target="_blank">点击查看</a>
                                 </div>
                             </div>
                             <hr />
@@ -523,16 +523,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/free-nodes/2025-7-17-free-high-speed-nodes.htm" title="「7月17日」最高速度23M/S，2025年V2ray/Shadowrocket/Clash/SSR每天更新免费节点订阅链接">「7月17日」最高速度23M/S，2025年V2ray/Shadowrocket/Clash/SSR每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-7-18-free-subscribe-node.htm" title="「7月18日」最高速度18M/S，2025年Shadowrocket/Clash/SSR/V2ray每天更新免费节点订阅链接">「7月18日」最高速度18M/S，2025年Shadowrocket/Clash/SSR/V2ray每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-6-17-free-v2ray.htm" title="「6月17日」最高速度20.9M/S，2025年SSR/Shadowrocket/Clash/V2ray每天更新免费节点订阅链接">「6月17日」最高速度20.9M/S，2025年SSR/Shadowrocket/Clash/V2ray每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-7-15-node-share-links.htm" title="「7月15日」最高速度21.5M/S，2025年V2ray/Clash/SSR/Shadowrocket每天更新免费节点订阅链接">「7月15日」最高速度21.5M/S，2025年V2ray/Clash/SSR/Shadowrocket每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-6-20-free-high-speed-nodes.htm" title="「6月20日」最高速度20.9M/S，2025年Shadowrocket/V2ray/Clash/SSR每天更新免费节点订阅链接">「6月20日」最高速度20.9M/S，2025年Shadowrocket/V2ray/Clash/SSR每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-7-19-clash-v2ray-ss-ssr.htm" title="「7月19日」最高速度19.1M/S，2025年Shadowrocket/Clash/V2ray/SSR每天更新免费节点订阅链接">「7月19日」最高速度19.1M/S，2025年Shadowrocket/Clash/V2ray/SSR每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-7-31-free-subscribe-node.htm" title="「7月31日」最高速度20.9M/S，2025年Clash/Shadowrocket/V2ray/SSR每天更新免费节点订阅链接">「7月31日」最高速度20.9M/S，2025年Clash/Shadowrocket/V2ray/SSR每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-6-15-free-node-subscribe-links.htm" title="「6月15日」最高速度20.6M/S，2025年Clash/SSR/V2ray/Shadowrocket每天更新免费节点订阅链接">「6月15日」最高速度20.6M/S，2025年Clash/SSR/V2ray/Shadowrocket每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-8-1-node-share-links.htm" title="「8月1日」最高速度22.1M/S，2025年SSR/Clash/V2ray/Shadowrocket每天更新免费节点订阅链接">「8月1日」最高速度22.1M/S，2025年SSR/Clash/V2ray/Shadowrocket每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-6-16-clash-v2ray-ss-ssr.htm" title="「6月16日」最高速度22.7M/S，2025年SSR/Clash/V2ray/Shadowrocket每天更新免费节点订阅链接">「6月16日」最高速度22.7M/S，2025年SSR/Clash/V2ray/Shadowrocket每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-7-8-free-node-subscribe-links.htm" title="「7月8日」最高速度19.1M/S，2025年V2ray/Shadowrocket/SSR/Clash每天更新免费节点订阅链接">「7月8日」最高速度19.1M/S，2025年V2ray/Shadowrocket/SSR/Clash每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-6-19-free-node-subscribe-links.htm" title="「6月19日」最高速度18.8M/S，2025年SSR/V2ray/Clash/Shadowrocket每天更新免费节点订阅链接">「6月19日」最高速度18.8M/S，2025年SSR/V2ray/Clash/Shadowrocket每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-6-26-free-node-subscribe.htm" title="「6月26日」最高速度20.6M/S，2025年Clash/Shadowrocket/V2ray/SSR每天更新免费节点订阅链接">「6月26日」最高速度20.6M/S，2025年Clash/Shadowrocket/V2ray/SSR每天更新免费节点订阅链接</a></li>
                         <li class="py-2"><a href="/free-nodes/2025-7-5-free-v2ray.htm" title="「7月5日」最高速度18.9M/S，2025年V2ray/Shadowrocket/SSR/Clash每天更新免费节点订阅链接">「7月5日」最高速度18.9M/S，2025年V2ray/Shadowrocket/SSR/Clash每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-7-25-free-subscribe-node.htm" title="「7月25日」最高速度20M/S，2025年Shadowrocket/V2ray/SSR/Clash每天更新免费节点订阅链接">「7月25日」最高速度20M/S，2025年Shadowrocket/V2ray/SSR/Clash每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-7-24-node-share-links.htm" title="「7月24日」最高速度19.9M/S，2025年Shadowrocket/V2ray/Clash/SSR每天更新免费节点订阅链接">「7月24日」最高速度19.9M/S，2025年Shadowrocket/V2ray/Clash/SSR每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-7-1-node-share-links.htm" title="「7月1日」最高速度18.4M/S，2025年SSR/Clash/Shadowrocket/V2ray每天更新免费节点订阅链接">「7月1日」最高速度18.4M/S，2025年SSR/Clash/Shadowrocket/V2ray每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-6-28-free-v2ray-subscribe.htm" title="「6月28日」最高速度20.2M/S，2025年SSR/Shadowrocket/V2ray/Clash每天更新免费节点订阅链接">「6月28日」最高速度20.2M/S，2025年SSR/Shadowrocket/V2ray/Clash每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-7-7-free-node-subscribe-links.htm" title="「7月7日」最高速度20.8M/S，2025年Shadowrocket/V2ray/SSR/Clash每天更新免费节点订阅链接">「7月7日」最高速度20.8M/S，2025年Shadowrocket/V2ray/SSR/Clash每天更新免费节点订阅链接</a></li>
                     </ul>
     </div>
 </div>
@@ -544,7 +544,10 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">24</span> <a href="/date/2025-07/" title="2025-07 归档">2025-07</a></h4>
+                <h4><span class="badge" style="float: right;">1</span> <a href="/date/2025-08/" title="2025-08 归档">2025-08</a></h4>
+            </li>
+                        <li class="py-2">
+                <h4><span class="badge" style="float: right;">29</span> <a href="/date/2025-07/" title="2025-07 归档">2025-07</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">21</span> <a href="/date/2025-06/" title="2025-06 归档">2025-06</a></h4>
